--- a/css/main.css
+++ b/css/main.css
@@ -152,3 +152,25 @@ header .countwrap .hidden {
 	border-color: #5146ad;
 }
 
+.input-form a {
+	display: inline-block;
+	padding: 20px 50px;
+	background-color: #67ca67;
+	color: #fff;
+	text-decoration: none;
+	margin-top: 30px;
+}
+
+@media only screen and (max-width : 480px) {
+	header .bedroomsCount-wrap {
+		display: none;
+	}
+
+	header .bathroomsCount-wrap {
+		display: none;
+	}
+
+	header .cleantypeCount-wrap {
+		display: none;
+	}
+}
