--- a/css/main.css
+++ b/css/main.css
@@ -174,3 +174,9 @@ header .countwrap .hidden {
 		display: none;
 	}
 }
+
+@media only screen and (min-width : 481px) {
+	#cleanTimeMobile {
+		visibility: hidden;
+	}
+}
